created event listeners to filter through animal type

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <button type="button" class="btn btn-primary" id="all-btn">All</button>
+  <button type="button" class="btn btn-primary" id="cat-btn">Cats</button>
+  <button type="button" class="btn btn-primary" id="dinos-btn">Dinos</button>
+  <button type="button" class="btn btn-primary" id="dog-btn">Dogs</button>
   <div id="app">
     
   </div>
