--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Pet Adoption</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
 </head>
@@ -28,13 +28,15 @@
     <div class="form-floating mb-3">
       <input type="text" class="form-control" id="type" placeholder="type" required>
       <label for="floatingInput">Type</label>
-</div>
+    </div>
     <div class="form-floating mb-3">
       <input type="url" class="form-control" id="image" placeholder="image" required>
       <label for="floatingInput">Image</label>
     </div>
     <button type="submit" class="btn btn-success" id="form-submit">Add Pet</button>
   </form>
+</div>
+</div>
   <div class="buttons">
   <button type="button" class="btn btn-outline-success" id="all-btn">All</button>
   <button type="button" class="btn btn-outline-success" id="cat-btn">Cats</button>
