--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <label for="floatingInput">Type</label>
     </div>
     <div class="form-floating mb-3">
-      <input type="url-text" class="form-control" id="image" placeholder="image" required>
+      <input type="image-text" class="form-control" id="image" placeholder="image" required>
       <label for="floatingInput">Image</label>
     </div>
     <button type="submit" class="btn btn-success" id="form-submit">Add Pet</button>
